// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App: index mapStateToProps with values 1`] = `
Object {
  "isLoggedIn": true,
}
`;

exports[`App: index mapStateToProps without values 1`] = `
Object {
  "isLoggedIn": false,
}
`;

exports[`App: index render in enterprise mode 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(MenuBar)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    <Switch>
      <Route exact={true} path=\\"/\\">
        <Redirect to=\\"/home\\" push={false} />
      </Route>
      <Route exact={true} path=\\"/home\\" component={[Function: C]} />
      <Route exact={true} path=\\"/apps\\" component={[Function: C]} />
      <CommonRoute route=\\"public\\" />
      <Route component={[Function: SideBar]} />
    </Switch>
  </main>
</div>"
`;

exports[`App: index render in public mode when user is logged in 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(MenuBar)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    <Switch>
      <Route exact={true} path=\\"/\\">
        <Redirect to=\\"/home\\" push={false} />
      </Route>
      <Route exact={true} path=\\"/home\\" component={[Function: C]} />
      <Route exact={true} path=\\"/apps\\" component={[Function: C]} />
      <CommonRoute route=\\"public\\" />
      <Route component={[Function: SideBar]} />
    </Switch>
  </main>
</div>"
`;

exports[`App: index render in public mode when user is not logged in 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(MenuBar)) />
  <main id=\\"outer-container\\" style={{...}}>
    <Switch>
      <Route exact={true} path=\\"/\\">
        <Redirect to=\\"/home\\" push={false} />
      </Route>
      <Route exact={true} path=\\"/home\\" component={[Function: C]} />
      <Route exact={true} path=\\"/apps\\" component={[Function: C]} />
      <CommonRoute route=\\"public\\" />
      <Route component={[Function: SideBar]} />
    </Switch>
  </main>
</div>"
`;
